--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "1.0.0",
   "description": "ionic-firebase: An Ionic project",
   "dependencies": {
-    "angular-moment": "^0.9.0",
     "gulp": "^3.5.6",
+    "gulp-clean-css": "^2.0.1",
     "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^0.7.1"
+    "gulp-sass": "^2.3.2",
+    "http-server": "^0.9.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
+  },
+  "scripts": {
+    "postinstall": "bower install && gulp",
+    "update-deps": "npm update",
+    "postupdate-deps": "bower update",
+    "prestart": "npm install",
+    "start": "http-server -a localhost -p 8000 -c-1 ./www"
   }
 }
