--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "gulp-clean-css": "^2.0.1",
     "gulp-concat": "^2.2.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.3.2",
-    "http-server": "^0.9.0"
+    "gulp-sass": "^2.3.2"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -20,6 +19,6 @@
     "update-deps": "npm update",
     "postupdate-deps": "bower update",
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1 ./www"
+    "start": "ionic serve"
   }
 }
